--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 fastapi
 uvicorn[standard]
-sqlalchemy
-python-dotenv
-pandas
-matplotlib
-openpyxl
-pydantic
+sqlmodel
+jinja2
+aiofiles
+python-multipart
+httpx
